--- a/GBO.html
+++ b/GBO.html
@@ -108,7 +108,7 @@
       <div class="container">
         <section class="hero">
           <div class="hero-content">
-            <h1 class="hero-title">РЕМОНТ И ОБСЛУЖИВАНИЕ АВТО</h1>
+            <h1 class="hero-title">ТУТ БУДЕТ СЕКЦИЯ ПРО ГБО</h1>
             <div class="hero-content-container">
               <div>
                 <svg
