--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </li>
               <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li><a href="">Діагностика</a></li>
-              <li><a href="">Чіп тюнінг</a></li>
+              <li><a href="">Програмне тюнінгування</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -261,6 +261,68 @@
           <div class="services-carousel">
             <div class="services-container" id="servicesContainer">
               <div class="service-card">
+                <h3>ПРОДАЖА АВТОЗАПЧАСТЕЙ</h3>
+                <p>
+                  В наличии подвески, тормозные системы, системы зажигания,
+                  фильтры, системы управления, светотехника, трансмиссии,
+                  автоэлектроника, шины и диски
+                </p>
+                <div class="btn-container">
+                  <a href="./parts.html" class="details-btn">ПОДРОБНЕЕ</a>
+                </div>
+              </div>
+
+              <div class="service-card">
+                <h3>УСТАНОВКА ГБО</h3>
+                <p>
+                  Подбор, установка, настройка и обслуживание газобаллонного
+                  оборудования любых производителей.
+                </p>
+                <div class="btn-container">
+                  <a href="./GBO.html" class="details-btn">ПОДРОБНЕЕ</a>
+                </div>
+              </div>
+
+              <div class="service-card">
+                <h3>ДИАГНОСТИКА ДВИГАТЕЛЯ</h3>
+                <p>
+                  Компьютерная диагностика двигателя, проверка состояния
+                  цилиндропоршневой группы, системы зажигания и впрыска
+                </p>
+                <div class="btn-container">
+                  <a href="./service-catalog.html#dvigatel" class="details-btn"
+                    >ПОДРОБНЕЕ</a
+                  >
+                </div>
+              </div>
+
+              <div class="service-card">
+                <h3>РЕМОНТ ХОДОВОЙ</h3>
+                <p>
+                  Диагностика и ремонт подвески, замена амортизаторов, шаровых
+                  опор, рычагов, сайлентблоков
+                </p>
+                <div class="btn-container">
+                  <a href="./service-catalog.html#hodovka" class="details-btn"
+                    >ПОДРОБНЕЕ</a
+                  >
+                </div>
+              </div>
+
+              <div class="service-card">
+                <h3>АВТОЭЛЕКТРИКА</h3>
+                <p>
+                  Диагностика и ремонт электрооборудования автомобиля, проводки,
+                  блоков управления, датчиков
+                </p>
+                <div class="btn-container">
+                  <a href="./service-catalog.html#electrika" class="details-btn"
+                    >ПОДРОБНЕЕ</a
+                  >
+                </div>
+              </div>
+
+              <div class="service-card">
                 <h3>РЕМОНТ И ТЕХ ОБСЛУЖИВАНИЕ</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -275,92 +337,46 @@
               </div>
 
               <div class="service-card">
-                <h3>ПРОДАЖА АВТОЗАПЧАСТЕЙ</h3>
-                <p>
-                  В наличии подвески, тормозные системы, системы зажигания,
-                  фильтры, системы управления, светотехника, трансмиссии,
-                  автоэлектроника, шины и диски
-                </p>
-                <div class="btn-container">
-                  <a href="./parts.html" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>ЗАМЕНА ЖИДКОСТЕЙ</h3>
-                <p>
-                  Замена моторного масла, тормозной жидкости, антифриза,
-                  омывателя лобового стекла, масла коробки передач, хладагента
-                  кондиционера, и остальных технических жидкостей в автомобиле
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>ОСМОТР АВТО ПЕРЕД ПОКУПКОЙ</h3>
-                <p>
-                  Диагностика авто перед покупкой, проверка двигателя, коробки
-                  передач, электроники с помощью тест-драйва
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>ДИАГНОСТИКА ДВИГАТЕЛЯ</h3>
-                <p>
-                  Компьютерная диагностика двигателя, проверка состояния
-                  цилиндропоршневой группы, системы зажигания и впрыска
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
                 <h3>РЕМОНТ ТРАНСМИССИИ</h3>
                 <p>
                   Диагностика и ремонт механических и автоматических коробок
                   передач, редукторов, раздаточных коробок
                 </p>
                 <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
+                  <a
+                    href="./service-catalog.html#transmisija"
+                    class="details-btn"
+                    >ПОДРОБНЕЕ</a
+                  >
                 </div>
               </div>
 
               <div class="service-card">
-                <h3>РЕМОНТ ХОДОВОЙ</h3>
+                <h3>ОБСЛУГОВУВАННЯ ГАЛЬМІВНОЇ СИСТЕМИ</h3>
                 <p>
-                  Диагностика и ремонт подвески, замена амортизаторов, шаровых
-                  опор, рычагов, сайлентблоков
+                  Заміна гальмівної рідини, прокачування гальмівної системи,
+                  діагностика гальмівних колодок і дисків, перевірка роботи ABS,
+                  заміна гальмівних супортів та ремонт гідравлічної частини
+                  гальмівної системи.
                 </p>
                 <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
+                  <a href="./service-catalog.html#servisnoe" class="details-btn"
+                    >ПОДРОБНЕЕ</a
+                  >
                 </div>
               </div>
 
               <div class="service-card">
-                <h3>АВТОЭЛЕКТРИКА</h3>
+                <h3>ОБСЛУЖИВАНИЕ КОНДИЦИОНЕРА</h3>
                 <p>
-                  Диагностика и ремонт электрооборудования автомобиля, проводки,
-                  блоков управления, датчиков
+                  Заправка та заміна хладагенту, промивка системи, заміна
+                  фільтра-осушувача, діагностика тиску, перевірка герметичності,
+                  очищення випарника та дезінфекція системи кондиціонування
                 </p>
                 <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>КУЗОВНОЙ РЕМОНТ</h3>
-                <p>
-                  Ремонт кузовных элементов, покраска, антикоррозийная
-                  обработка, рихтовка без покраски
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
+                  <a href="./service-catalog.html#kondi" class="details-btn"
+                    >ПОДРОБНЕЕ</a
+                  >
                 </div>
               </div>
             </div>
@@ -531,10 +547,6 @@
           <div class="infinite-carousel">
             <div class="carousel-track">
               <div>
-                <img src="./img/avto-logo/3037-256x256x32.png" alt="acura" />
-                <p class="text-brend">acura</p>
-              </div>
-              <div>
                 <img
                   src="./src/img/avto-logo/4226-256x256x8.png"
                   alt="daewoo"
@@ -554,7 +566,7 @@
               </div>
               <div>
                 <img
-                  src="./src/img/avto-logo/acura_logo.png"
+                  src="./src/img/avto-logo/alfa-romeo-logo.png"
                   alt="alfa-romeo"
                 />
                 <p class="text-brend">alfa-romeo</p>
