--- a/price.html
+++ b/price.html
@@ -1229,72 +1229,69 @@
                 <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Ходова частина</h3>
                 <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
+                  Діагностика та ремонт підвіски, заміна амортизаторів,
+                  сайлентблоків, кульових опор, рульових тяг, ремонт підшипників
+                  ступиць.
                 </p>
               </div>
               <div class="service-card work-card">
                 <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Електрика</h3>
                 <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
+                  Діагностика та ремонт електросистем автомобіля, заміна
+                  генераторів, стартерів, акумуляторів, ремонт проводки,
+                  установка додаткового обладнання.
                 </p>
               </div>
               <div class="service-card work-card">
                 <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Гальмівна система</h3>
                 <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
+                  Повна діагностика гальм, заміна колодок, дисків, гальмівних
+                  циліндрів, прокачування гальмівної системи, ремонт ABS.
                 </p>
               </div>
               <div class="service-card work-card">
                 <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Трансмісія</h3>
                 <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
+                  Ремонт КПП (механічних та автоматичних), заміна зчеплення,
+                  ремонт приводів, заміна трансмісійної рідини.
                 </p>
               </div>
               <div class="service-card work-card">
                 <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Технічне обслуговування</h3>
                 <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
+                  Планове ТО: заміна оливи та фільтрів, перевірка технічного
+                  стану, заміна рідин, комп'ютерна діагностика.
                 </p>
               </div>
               <div class="service-card work-card">
                 <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Обслуговуються марки</h3>
                 <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
+                  Обслуговуємо всі європейські, азіатські та американські
+                  автомобілі. Спеціалізуємося на VAG, BMW, Mercedes, Toyota,
+                  Hyundai-Kia.
                 </p>
               </div>
               <div class="service-card work-card">
                 <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Діагностика</h3>
                 <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
+                  Комп'ютерна діагностика, перевірка двигуна, ходової,
+                  електросистем. Виявлення несправностей за допомогою
+                  професійного обладнання.
                 </p>
               </div>
               <div class="service-card work-card">
                 <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Чіп тюнінг</h3>
+                <h3>Програмне тюнінгування</h3>
                 <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
+                  Оптимізація роботи двигуна, збільшення потужності, економія
+                  палива. Програмне налаштування ЕБУ для покращення
+                  характеристик авто.
                 </p>
               </div>
             </div>
