--- a/service-catalog.html
+++ b/service-catalog.html
@@ -366,11 +366,12 @@
               </li>
             </ul>
           </div>
-          <div id="gbo" class="catalog-container">
-            <h3 class="catalog-title">Встановлення ГБО</h3>
+          <div id="kondi" class="catalog-container">
+            <h3 class="catalog-title">Обслуговування кондиціонерів</h3>
             <p class="catalog-description">
-              Встановлення, налаштування, ремонт і сервісне обслуговування
-              газобалоного обладнання.
+              Заправка та заміна хладагенту, промивка системи, заміна
+              фільтра-осушувача, діагностика тиску, перевірка герметичності,
+              очищення випарника та дезінфекція системи кондиціонування.
             </p>
             <ul class="catalog-list">
               <li class="catalog-item">
@@ -404,47 +405,31 @@
             <div class="benefits-container">
               <div class="benefits-top">
                 <p class="benefits-number">1</p>
-                <p class="benefits-top-text">
-                  Гарантия на выполненные работы до 24 мес
-                </p>
+                <p class="benefits-top-text">ПОРЯДОЧНОСТЬ</p>
               </div>
-              <img
-                class="benefits-img"
-                src="./src/img/kaskad/hero1.jpg"
-                alt=""
-              />
-              <p class="benefits-bot-text">Оснащен современным оборудованием</p>
+              <img class="benefits-img" src="./src/img/bene-1.jpg" alt="" />
+              <p class="benefits-bot-text">
+                «Честный ремонт: только нужные работы, только нужные запчасти.»
+              </p>
             </div>
             <div class="benefits-container">
               <div class="benefits-top">
                 <p class="benefits-number">2</p>
-                <p class="benefits-top-text">
-                  Профессиональное диагностическое оборудование
-                </p>
+                <p class="benefits-top-text">ОТВЕТСТВЕННОСТЬ</p>
               </div>
-              <img
-                class="benefits-img"
-                src="./src/img/kaskad/hero1.jpg"
-                alt=""
-              />
+              <img class="benefits-img" src="./src/img/bene-2.jpg" alt="" />
               <p class="benefits-bot-text">
-                Качественные, рекомендованные производителем запчасти
+                «Гарантируем качество – отвечаем за результат!»
               </p>
             </div>
             <div class="benefits-container">
               <div class="benefits-top">
                 <p class="benefits-number">3</p>
-                <p class="benefits-top-text">
-                  Скидки подписчикам и по промокоду
-                </p>
+                <p class="benefits-top-text">ОПЕРАТИВНОСТЬ</p>
               </div>
-              <img
-                class="benefits-img"
-                src="./src/img/kaskad/hero1.jpg"
-                alt=""
-              />
+              <img class="benefits-img" src="./src/img/bene-3.jpg" alt="" />
               <p class="benefits-bot-text">
-                Квалифицированные специалисты с опытом
+                «Ваше авто не задержится у нас дольше необходимого.»
               </p>
             </div>
           </div>
