--- a/parts.html
+++ b/parts.html
@@ -154,13 +154,13 @@
           </div>
           <div class="carousel-container">
             <div class="carousel">
-              <img src="./src/img/parts1.jpg" alt="Запчасти" class="active" />
-              <img src="./src/img/parts2.jpg" alt="Запчасти" />
-              <img
-                src="./src/img/parts3.jpg"
-                alt="Запчасти"
-                style="display: none"
-              />
+              <img src="./src/img/parts/p1.jpg" alt="Запчасти" class="active" />
+              <img src="./src/img/parts/p2.jpg" alt="Запчасти" />
+              <img src="./src/img/parts/p3.jpg" alt="Запчасти" />
+              <img src="./src/img/parts/p4.jpg" alt="Запчасти" />
+              <img src="./src/img/parts/p5.jpg" alt="Запчасти" />
+              <img src="./src/img/parts/p6.jpg" alt="Запчасти" />
+
               <!-- Третье изображение скрыто -->
             </div>
           </div>
