--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
           <li class="nav-item">
             <a href="./parts.html">Подбор запчастей</a>
           </li>
-          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
+          <li class="nav-item">
+            <a href="./ustanovka-gbo.html">Установка ГБО</a>
+          </li>
 
           <li class="nav-item dropdown">
             <a href="./service-catalog.html">Услуги</a>
