--- a/parts.html
+++ b/parts.html
@@ -160,8 +160,7 @@
               <img src="./src/img/parts/p4.jpg" alt="Запчасти" />
               <img src="./src/img/parts/p5.jpg" alt="Запчасти" />
               <img src="./src/img/parts/p6.jpg" alt="Запчасти" />
-
-              <!-- Третье изображение скрыто -->
+              <img src="./src/img/parts/p7.jpg" alt="Запчасти" />
             </div>
           </div>
           <div class="Our-Benefits">
