--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -174,6 +174,117 @@
             </p>
           </div>
         </section>
+        <section class="gbo-section">
+          <h2>Установка ГБО на АС КАСКАД</h2>
+          <div class="main-gbo">
+            <div class="main-gbo-content">
+              <p>
+                <span class="gbo-span"
+                  >Сервис установки ГБО в Павлограде "АС КАСКАД"
+                </span>
+                — это место, где вы сможете безопасно, удобно и с комфортом
+                решить все вопросы, связанные с установкой и обслуживанием ГБО
+                для вашего автомобиля. Мы гарантируем высочайшее качество работ,
+                приятные подарки каждому клиенту, полный комплекс услуг и
+                по-настоящему внимательный сервис.
+              </p>
+              <ul class="gbo-list">
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  Установка ГБО за 1 день.
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  Гарантия на работу и оборудование до 24 мес.
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  Сертификация ГБО, сразу после установки.
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  Техническое обслуживание автомобиля.
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  Ремонт и настройка систем.
+                </li>
+              </ul>
+            </div>
+            <div>
+              <img
+                class="gbo-main-img"
+                src="./src/img/gbo/gbo-main.jpg"
+                alt="shema-ustanovki"
+              />
+            </div>
+          </div>
+        </section>
         <section class="benefits-section">
           <h2 class="benefits-title">
             Почему <span class="span-benefits-title"> выбирают нас</span>
